#2196 More cleanup and a little of refactoring